2010-05-18  Jian Li  <jianli@chromium.org>

        Reviewed by Dmitry Titov.

        Fix bug 39285: fast/files/file-reader.html is timing out on all mac bots.
        https://bugs.webkit.org/show_bug.cgi?id=39135

        The timeout is caused by 59659 that changed the GC timer to 0 and thus
        triggered a bug in FileReader code. The fix is to add more states so
        that hasPendingActivity() can do the check correctly.

        * html/FileReader.cpp:
        (WebCore::FileReader::FileReader):
        (WebCore::FileReader::hasPendingActivity):
        (WebCore::FileReader::readInternal):
        (WebCore::FileReader::terminate):
        (WebCore::FileReader::didStart):
        (WebCore::FileReader::didGetSize):
        (WebCore::FileReader::didRead):
        (WebCore::FileReader::didFinish):
        (WebCore::FileReader::didFail):
        (WebCore::FileReader::readyState):
        (WebCore::FileReader::result):
        * html/FileReader.h:
        (WebCore::FileReader::):

2010-05-18  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler.

        Clean up GraphicsLayer naming code
        https://bugs.webkit.org/show_bug.cgi?id=39316

        Move code that generates a name for the GraphicsLayer (used in debug builds only) into
        a new nameForLayer() method. Use it when naming the foreground layer.

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::createGraphicsLayer):
        (WebCore::RenderLayerBacking::updateForegroundLayer):
        (WebCore::RenderLayerBacking::nameForLayer):
        * rendering/RenderLayerBacking.h:

2010-05-18  Justin Schuh  <jschuh@chromium.org>

        Reviewed by Adam Barth.

        Moving frame.src checks out of the bindings
        https://bugs.webkit.org/show_bug.cgi?id=37815

        Moved JavaScript frame.src checks out of bindings and into
        HTMLFrameElementBase. Added main thread state stack to JavaScriptCore